--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/drawer": "^7.3.11",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.8",
+    "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.8",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
@@ -44,6 +46,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "@types/react-navigation": "^3.0.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
